# vimure

./: .coveragerc  .gitattributes  .gitignore  .nojekyll  CONTRIBUTING.md  LICENSE.html  Makefile  README.md  _quarto.yml  bump_version.R  docker-compose.yml  index.html  index.qmd  listings.json  people.qmd  requirements.txt  robots.txt  search.json  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  development_workflow.md  documentation.md
.github/workflows/: coverage.yml  publish.yml  test.yml  (+1 more)
articles/: quick_start.html  vimure.html
data/: README.md
docs/: .gitignore  404.html  LICENSE-text.html  LICENSE.html  _quarto.yml  authors.html  diagnostics.html  generate-py-docs.py  index.html  index.qmd  model.html  pkgdown.yml  pythondocs.py  search.json  sitemap.xml
experiments/: karnataka.py  unreliable_reporters.py
latest/: install.html  people.html  pkg-docs.html  tutorials.html
notebooks/: Dockerfile  Notebook 02 - Run Model.ipynb  Notebook 03 - Experiment under and over reporters.ipynb  Notebook 04 - Karnataka data.ipynb  requirements.txt
reference/: gm_StandardSBM.html  index.html  vm_config.html
references/: references.bib
src/: run-karnataka.sh
src/python/: CHANGELOG.md  README.md  VERSION  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
src/python/vimure/: __init__.py  _io.py  _log.py  diagnostics.py  io.py  log.py  model.py  plot.py  synthetic.py  utils.py
src/python/vimure/extras/: plot.py
src/python/vimure/test/: __init__.py  test_generate_X.py  test_io.py  test_model.py  test_synthetic.py
(+327 files in other folders)
